--- a/package.json
+++ b/package.json
@@ -1,15 +1,54 @@
 {
   "name": "vue-sample",
   "version": "0.1.0",
+  "description": "vue-sample",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "admin-dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=admin.mix",
+    "admin-watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=admin.mix",
+    "admin-hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=admin.mix",
+    "admin-production": "cross-env NODE_OPTIONS=--max_old_space_size=5120 NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=admin.mix",
+    "user-dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=user.mix",
+    "user-watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=user.mix",
+    "user-hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=user.mix",
+    "user-production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --env.mixfile=user.mix",
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
+  "keywords": [],
+  "author": "Venkata Krishna Inti",
+  "license": "ISC",
   "dependencies": {
+    "ag-grid-community": "^21.1.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "cross-env": "^5.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-template": "^6.2.0",
+    "jquery": "^3.4.1",
+    "laravel-mix": "^4.1.2",
+    "lodash": "^4.17.15",
+    "mix-html-builder": "^0.3.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
+    "popper.js": "^1.15.0",
+    "posthtml": "^0.11.4",
+    "posthtml-include": "^1.2.0",
+    "posthtml-loader": "^1.0.1",
+    "replace-in-file": "^4.1.1",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.22.7",
+    "sass-loader": "^7.1.0",
+    "sweetalert2": "^8.14.0",
+    "tailwindcss": "^1.0.5",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.7",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
